--- a/004.JS학습/JS5-3.함수연습_갤러리 copy.html
+++ b/004.JS학습/JS5-3.함수연습_갤러리 copy.html
@@ -96,36 +96,6 @@
             window.addEventListener("load", () => {
                 console.log("로딩완료!");
 
-                /********************************************* 
-                [ 롤링갤러리 기능정의 ]
-
-                - 버튼클릭시 메인 이미지 변경하기
-                1. 오른쪽버튼 클릭시 메인이미지가
-                다음 순번의 이미지로 변경된다.
-                (단,마지막 이미지 다음이미지는 처음이미지다)
-                2. 왼쪽버튼 클릭시 메인이미지가
-                이전 순번의 이미지로 변경된다.
-                (단, 처음이미지 이전이미지는 마지막 이미지다)
-
-                _____________________________________
-
-                [ 롤링갤러리 기능구현 설계 ]
-
-                1. 이미지 번호를 전역변수로 설정한다.
-                2. 버튼클릭시 전역변수 이미지번호를 증감하여
-                실제로 변경될 이미지 코드의 src속성값으로
-                설정한다.
-                3. 증감시 오른쪽버튼은 ++(1씩증가)
-                    왼쪽버튼은 --(1씩감소)
-                4. 제한조건 :
-                    마지막 다음번호는 1
-                    처음 이전번호는 7
-                    (1~7까지 7개의 이미지가 있다)
-                    if문으로 조건을 체크한다!
-
-
-            *********************************************/
-
                 // 함수바깥쪽에 전역변수 선언 및 할당!
 
                 // 1. 이미지 번호 변수(전역변수->goSlide함수에서 참조!)
@@ -167,58 +137,26 @@
                     ele.onclick = () => goSlide(idx);
                 }); ////////////// forEach //////////////
 
-                // 더 생략해서 쓰면 아래와 같다!
-                // btns.forEach((ele,idx)=>
-                // ele.onclick = ()=> goSlide(idx));
-
-                /**************************************** 
-                함수명: goSlide
-                기능: 갤러리 이미지,글자 변경하기
-                ****************************************/
                 const goSlide = (seq) => {
-                    // seq - 버튼순번
 
-                    //1. 함수호출 및 전달값 확인
                     console.log("왕빛나!", seq);
-
-                    // 현재전역 inum변수
+                    
                     console.log("현재전역inum:", inum);
 
-                    // 2. 버튼별 분기하기
-                    // 2-1. 오른쪽 버튼 분기(이미지번호 증가)
-                    // seq 값이 1이면 true임!
                     if (seq) {
-                        // 1씩증가
                         inum++;
-                        // 한계값 체크(처음값으로 변경)
                         if (inum === 8) inum = 1;
                     } ///////////if//////////////
-
-                    // 2-2. 왼쪽 버튼 분기(이미지번호 감소)
                     else {
-                        // 1씩감소
                         inum--;
-                        // 한계값 체크(마지막값으로 변경)
                         if (inum === 0) inum = 7;
                     }
 
-                    console.log("증감후inun:", inum);
-
-                    // 3. 변경대상에 변경코드 적용하기
-                    // 변경대상: #mbox img -> mimg변수
-                    // mimg.src = `./images/img${inum}.jpg`;
+                    console.log("증감후inum:", inum);
                     mimg.setAttribute("src", `./images/img${inum}.jpg`);
 
-                    // 4. 이미지와 순서대로 매칭한 메시지배열의 글자를
-                    // 글자출력바스에 찍어주기
-                    // 메시지배열 : itxt 배열변수
-                    // 글자출력박스 : .imgtxt -> imgtxt변수
-                    // 배열의 순번은 이미지번호-1 이다!
                     imgtxt.innerHTML = `${itxt[inum - 1]}`;
-                    // imgtxt.innerText =  itxt[inum-1];
 
-                    // 5. 출력된 글자색 순서대로 변경하기
-                    // 색상배열 -> tcolor[]
                     imgtxt.style.color = tcolor[inum - 1];
                 }; /////////// goSlide ////////////
 
