--- a/004.JS학습/JS실험실/01.따라다니는원.html
+++ b/004.JS학습/JS실험실/01.따라다니는원.html
@@ -33,9 +33,11 @@
         body{
             width: 100vw;
             height: 100vh;
+            height: 300vh;
+            /* 새로 스크롤 생기게함! */
         }
         .mover{
-            position: fixed;
+            position: absolute;
             z-index: 1;
             /* 
                 [ z-index 무버에 주는 기준 ]
@@ -135,16 +137,34 @@
                 // x좌표 : event.pageX
                 // y좌표 : event.pageY
                 // console.log("x:",event.pageX,"\ny:",event.pageY);
+                console.log("x:",event.pageX,"\ny:",event.pageY);
 
                 // 위치값 보정(gap은 무버크기의 절반)
-                var posx = event.pageX-gap;
-                var posy = event.pageY-gap;
+                var posx = event.clientX-gap;
+                var posy = event.clientY-gap;
+                // clientX,clientY는 브라우저 화면에서의 위치이므로
+                // .mover가 fixed일 때 사용된다
+
+                //var posx = event.pageX-gap;
+                //var posy = event.pageY-gap;
+                // -> pageX,pageY는 전체 웹문서에서의 위치이므로
+                // .mover가 absolute이면 사용된다
 
                 // 무버에게 위치값 이동 셋팅하기(무버중앙위치 보정)
                 mover.style.top = posy+"px";
                 mover.style.left = posx+"px";
 
             };////////// mousemove 이벤트함수 ///////////
+
+            // body영역 바깥으로 나가면 사라지고 들어오면 나타남 //
+            document.body.onmouseenter = ()=>{
+                // 들어오면 나타남
+                mover.style.display = "block";
+            };/////// mouseenter /////////////////
+            document.body.onmouseleave = ()=>{
+                // 나가면 사라짐
+                mover.style.display = "none";
+            };/////// mouseleave /////////////////
 
             ///////////////////////////////////////////
             // a요소 오버 시 원 크게하기!
