--- a/002.CSS학습/05.3DAni/SolarSystem3D.html
+++ b/002.CSS학습/05.3DAni/SolarSystem3D.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Solar System 3D Ani</title>
         <link rel="stylesheet" href="./css/solar3d.css" />
-        <script src="./js/solar3d copy.js"></script>
+        <script src="./js/solar3d.js"></script>
     </head>
     <body>
         <!-- 타이틀 -->
