--- a/004.JS학습/JS3-3.switch문연습.html
+++ b/004.JS학습/JS3-3.switch문연습.html
@@ -179,16 +179,16 @@
                 var isrc; // 이미지경로변수
 
                 switch (btxt) {
-                    case btxt === "포스터":
+                    case "포스터":
                         isrc = "./images/ala1.jpg";
                         break;
-                    case btxt === "장면1":
+                    case "장면1":
                         isrc = "./images/ala4.jpg";
                         break;
-                    case btxt === "장면2":
+                    case "장면2":
                         isrc = "./images/ala3.jpg";
                         break;
-                    case btxt === "장면3":
+                    case "장면3":
                         isrc = "./images/ala2.jpg";
                         break;
                 }
