--- a/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./css/intro.css">
     <!-- 파비콘 -->
     <link rel="shortcut icon" href="./images/logo_cgv.png" type="image/x-icon" />
+    <!-- 인트로페이지 JS -->
+    <script src="./js/intro.js"></script>
 </head>
 <body>
     <!-- 1. 배경 비디오 넣기 -->
@@ -14,7 +16,7 @@
 
     <!-- 2. 들어가기 버튼 -->
     <h1 id="enter">
-        <a href="./index.html">
+        <a href="./main.html">
             <img src="./images/logo_cgv.png" alt="CGV로고">
             <span>Click Here!</span>
         </a>
