--- a/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
@@ -13,6 +13,7 @@
 <body>
     <!-- 1. 배경 비디오 넣기 -->
     <video id="myvid" src="./images/cgv.mp4" autoplay muted playsinline></video>
+    <!-- loop설정이면 무한반복: 끝날때 이동하려면 이것을 설정하지 마라 -->
 
     <!-- 2. 들어가기 버튼 -->
     <h1 id="enter">
