--- a/004.JS학습/JS8-2.DOM_메서드.html
+++ b/004.JS학습/JS8-2.DOM_메서드.html
@@ -107,7 +107,7 @@
             .wrap{
                 display: flex;
                 width: 600px;
-                height: 600px;
+                min-height: 600px;
                 margin: 0 auto;
                 padding: 15px;
                 border: 4px dotted lightseagreen;
@@ -115,9 +115,6 @@
             .wrap > div {
                 outline: 1px solid red;
                 width: 300px;
-                vertical-align: top;
-                /*인라인블록은 인라인성격이 있어서 기본 옆으로 세로정렬은
-            baseline이므로 아래쪽선을 기준한다. 이것을 위줄 기준변경함*/
             }
 
 
