--- a/004.JS학습/JS8-2.DOM_메서드.html
+++ b/004.JS학습/JS8-2.DOM_메서드.html
@@ -12,49 +12,182 @@
                 ////////////////////////////////////////////////////////
                 //// #div01의 각 메뉴에 마우스 오버시 하위메뉴 보이기 ////
                 ////////////////////////////////////////////////////////
+                // 1. 대상선정: .smenu
+                const smenu = document.querySelectorAll(".smenu");
 
-                /******************************************************** 
-                    [ 선택요소의 현재 크기, 위치값 알아오는 JS속성 ]
-                    1. 선택요소.offsetWidth : 가로값
-                    2. 선택요소.offsetHeight : 높이값
-                    3. 선택요소.offsetTop : top 위치값
-                    4. 선택요소.offsetLeft : left 위치값            
-                ********************************************************/
+                // console.log(smenu);
+
+                // 2. 이벤트 설정하기 : mouseover / mouseout
+                // for(let i = 0;i<smenu.length;i++)
+                // for of문
+                for (let x of smenu) {
+                    // x는 각 요소
+
+                    // 1. 마우스 오버시 //////////////////////
+                    x.onmouseover = () => {
+                        // 1. 대상 : 하위 직계 div요소
+                        let tg = x.querySelector("div");
+
+                        // 2. 대상의 높이값 알아오기 : 높이값+보정값
+                        let hv = tg.querySelector("ol").offsetHeight;
+                        // console.log("ol높이값:",hv);
+
+                        // 3. 서브메뉴 열리기
+                        tg.style.height = hv + 20 + "px";
+                        tg.style.transition = "height .4s ease-out";
+                    }; ///////// onmouseover ///////////
+
+                    // 2. 마우스 아웃시 //////////////////////
+                    x.onmouseout = () => {
+                        // 1. 대상 : 하위 직계 div요소
+                        let tg = x.querySelector("div");
+
+                        // 2. 서브메뉴 닫기
+                        tg.style.height = "0px";
+                    }; ///////// onmouseout ///////////
+                } /////////////// for of ///////////////////////
+
+                /********************************************************
+                                [ 선택요소의 현재 크기, 위치값 알아오는 JS속성 ]
+                                1. 선택요소.offsetWidth : 가로값
+                                2. 선택요소.offsetHeight : 높이값
+                                3. 선택요소.offsetTop : top 위치값
+                                4. 선택요소.offsetLeft : left 위치값
+                            ********************************************************/
 
                 /////////////////////////////////////////////////////////
                 // #div01의 서브메뉴 a요소를 클릭하면 해당주소로 새창열기 //
                 /////////////////////////////////////////////////////////
+                // 1. 대상선정 : .smenu ol a
+                const link = document.querySelectorAll(".smenu ol a");
+                // console.log(link);
 
-                /************************************************** 
-                
-                    [ 요소의 생성, 삭제, 이동하기 ]
+                // 2. 이벤트설정하기
+                link.forEach((ele, idx) => {
+                    // 1. 이벤트 셋팅하기
+                    ele.onclick = () => {
+                        // 0. a요소 기본이동막기
+                        event.preventDefault();
 
-                    1. 맨뒤 생성 혹은 맨뒤 이동
-                    -> 선택요소.appendChild(요소)
+                        // 1. 클릭된 요소 텍스트 읽어오기
+                        let atxt = ele.innerText;
+                        // console.log(atxt);
 
-                    2. 특정위치에 요소 넣기 혹은 이동
-                    -> 선택요소.insertBefore(넣을놈,넣을놈전놈)
+                        // 이동할 주소 변수
+                        let url;
 
-                    3. 요소의 삭제
-                    -> 선택요소.remove()
+                        // 2. 이동주소 할당하기
+                        // switch case문 분기하기
+                        switch (atxt) {
+                            case "Google":
+                                url = "http://www.google.com";
+                                break;
+                            case "Naver":
+                                url = "http://www.naver.com";
+                                break;
+                            case "Daum":
+                                url = "http://www.daum.net";
+                                break;
+                            case "Nate":
+                                url = "http://www.nate.com";
+                                break;
+                            case "SK":
+                                url = "http://www.sktelecom.com";
+                                break;
+                            case "KT":
+                                url = "http://www.kt.com";
+                                break;
+                            case "Uplus":
+                                url = "http://www.uplus.co.kr";
+                                break;
+                            case "CGV":
+                                url = "http://www.cgv.co.kr";
+                                break;
+                            case "MEGABOX":
+                                url = "http://www.megabox.co.kr";
+                                break;
+                            case "LOTTE CINEMA":
+                                url = "https://www.lottecinema.co.kr/NLCHS";
+                                break;
+                            case "GMARKET":
+                                url = "http://www.gmarket.co.kr";
+                                break;
+                            case "11번가":
+                                url = "http://www.11st.co.kr";
+                                break;
+                            case "Auction":
+                                url = "http://www.auction.co.kr";
+                                break;
+                            case "스토어팜":
+                                url = "https://shopping.naver.com/";
+                                break;
+                            case "인터파크":
+                                url = "http://www.interpark.co.kr";
+                                break;
+                            case "쿠팡":
+                                url = "http://www.coopang.co.kr";
+                                break;
+                            case "Apple":
+                                url = "http://www.apple.com";
+                                break;
+                            case "Samsung":
+                                url = "http://www.samsung.com";
+                                break;
+                            case "넷마블":
+                                url = "http://www.netmarble.net";
+                                break;
+                            case "넥슨":
+                                url = "https://www.nexon.com";
+                                break;
+                            case "IMC":
+                                url = "http://www.imc.co.kr";
+                                break;
+                        } //////////// switch case ///////////
 
-                    4. 새로운 요소 생성 (메모리상에 생성함)
-                    -> document.createElement(태그명)
+                        // console.log(url);
 
-                    5. 요소에 새로운 속성넣기 (메모리상에 생성함)
-                    -> document.createAttribute(속성명)
+                        // 3. 페이지 이동하기
+                        // 새창 : window.open()
+                        // 페이지 이동 : location.href = 이동주소
+                        // window.open().location.href = url;
 
-                    6. 생성된 속성에 값넣기
-                    -> 생성된속성.value = 값
+                        window.open(url);
+                    }; ///////// click 함수 ///////////
+                }); //////////// forEach ///////////////
 
-                    7. 요소의 새로운 속성 넣기
-                    -> 선택요소.setAttributeNode(새로운속성)
+                /**************************************************
 
-                **************************************************/
+                                [ 요소의 생성, 삭제, 이동하기 ]
+
+                                1. 맨뒤 생성 혹은 맨뒤 이동
+                                -> 선택요소.appendChild(요소)
+
+                                2. 특정위치에 요소 넣기 혹은 이동
+                                -> 선택요소.insertBefore(넣을놈,넣을놈전놈)
+
+                                3. 요소의 삭제
+                                -> 선택요소.remove()
+
+                                4. 새로운 요소 생성 (메모리상에 생성함)
+                                -> document.createElement(태그명)
+
+                                5. 요소에 새로운 속성넣기 (메모리상에 생성함)
+                                -> document.createAttribute(속성명)
+
+                                6. 생성된 속성에 값넣기
+                                -> 생성된속성.value = 값
+
+                                7. 요소의 새로운 속성 넣기
+                                -> 선택요소.setAttributeNode(새로운속성)
+
+                            **************************************************/
 
                 ////////////////////////////////////////////
                 //// DOM 요소 제어 및 조작하기 //////////////
                 ////////////////////////////////////////////
+                // 1. 변경대상 : #div02 ul
+                const ctg = document.querySelector("#div02 ul");
+                // console.log(ctg);
 
                 /////////////////////////////////////////////
                 // 새리스트 생성 버튼 클릭시 리스트 만들기 ////
@@ -62,6 +195,46 @@
                 // 이벤트 대상: .nbt
                 // 변경 대상: #div02 ul -> ctg 변수에 할당!
                 /////////////////////////////////////////////
+                const nbt = document.querySelector(".nbt");
+                // console.log(nbt);
+
+                // 새로운 이미지 번호 변수
+                let inum = 1;
+
+                // 순번에 따른 이름 배열변수
+                const cname = ["아이언맨", "딱딱이", "토르", "닥스", "스타로드"];
+
+                nbt.onclick = () => {
+                    // 1. 호출확인
+                    //console.log("new list!");
+
+                    // 2. 새로운 li생성하여 변수에 할당
+                    let ne = document.createElement("li");
+                    // createElement()는 메모리 상에 생성
+                    console.log(ne);
+                    // 3. 메모리 상에 생성된 li에 이미지 넣기
+                    ne.innerHTML = `
+                    <img src="images/ab${inum}.jpg" alt="${cname[inum - 1]}">
+                    `;
+
+                    // 4. 새로운 li요소에 title속성 셋팅하기
+                    ne.querySelector("img").title = `
+                    ${cname[inum - 1] + (inum === 1 ? "을" : "를")} 클릭하시면 삭제됩니다!
+                    `;
+                    // inum이 1이면 "아이언맨" -> 조사가 "을", 나머지는 "를"
+
+                    // 5. 새로운 li클릭 시 지우기 셋팅
+                    ne.onclick = ()=> ne.remove();
+                    // remove() -> 선택요소 삭제!
+
+                    // 6. 변경대상(ctg변수)에 새로운 li 맨뒤에 추가
+                    // appendChild(요소) -> 맨뒤에 요소추가!
+                    ctg.appendChild(ne);
+
+                    // 7. 다음번호를 업데이트하기
+                    inum++;
+                    if (inum === 6) inum = 1; // 한계수 체크
+                }; ////////////// click ///////////////
 
                 ///////////////////////////////////////////////
                 ///// 최초 리스트의 li를 클릭하면 지우기 셋팅! //
@@ -72,6 +245,8 @@
                 // 변경대상: 이벤트대상
                 // 변경내용: 삭제 셋팅하기
                 /////////////////////////////////////////////
+
+                
 
                 ///// 맨앞요소를 맨뒤로 이동하기 ////////////////////
                 // 이벤트 종류: click
@@ -96,15 +271,15 @@
                 // 넣을놈전놈 - 맨처음 li요소
                 //////////////////////////////////////////////////
 
-                /************************************************* 
-                    ※ appendChild() 와 insertBefore()는 대상을
-                    정하는 것에 따라 중간에 적용할 수 있다!
-                *************************************************/
+                /*************************************************
+                                ※ appendChild() 와 insertBefore()는 대상을
+                                정하는 것에 따라 중간에 적용할 수 있다!
+                            *************************************************/
             }); ///////// 로드구역 //////////////////////////////////////
             //////////////////////////////////////////////////////////
         </script>
         <style>
-            .wrap{
+            .wrap {
                 display: flex;
                 width: 600px;
                 min-height: 600px;
@@ -116,8 +291,6 @@
                 outline: 1px solid red;
                 width: 300px;
             }
-
-
 
             div img {
                 width: 50px;
