--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/index.html
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/index.html
@@ -19,6 +19,7 @@
     <body>
         <!-- 1.상단영역 -->
         <div id="top">
+            <!-- .top.on인 경우  -->
             <header class="ibx top">
                 <!-- 1-1.상단메뉴 -->
                 <div class="tmenu">
@@ -201,5 +202,10 @@
                 </ul>
             </footer>
         </div>
+
+        <!-- 위로가기버튼 -->
+        <a href="#" class="tbtn fi fi-angle-up">
+            <span class="ir">위로가기버튼</span>
+        </a>
     </body>
 </html>
