--- a/팀프_메인구현소스/index.html
+++ b/팀프_메인구현소스/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- 1. 배경 비디오 넣기 -->
-    <video id="myvid" src="./img/video.mp4" autoplay muted playsinline></video>
+    <!-- <video id="myvid" src="./img/video.mp4" autoplay muted playsinline></video> -->
     <!-- 출처: KBS한국방송 천체영상 -->
     <!-- loop설정이면 무한반복: 끝날때 이동하려면 이것을 설정하지 말아라! -->
 
