--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -53,8 +53,26 @@
     </div>
 
     <!-- 2. 메인영역 -->
-    <div class="pg pg1"></div>
-    <div class="pg pg2"></div>
+    <div class="pg pg1">
+        <video class="vd_mars" src="./planet/Mars/img/Mars_video.mp4" autoplay muted></video>
+    </div>
+    <div class="pg pg2">
+        <h2>Moon to Mars</h2>
+        <div class="pg2_img1">
+            <img src="./planet/Mars/img/2pg_img1.jpg" alt="화성탐사사진1">
+        </div>
+        <h3>
+            After completing the first sample depot on another world, the rover continues its hunt for Mars rocks worthy of study on Earth.<br><br>
+ 
+            NASA’s Perseverance rover will celebrate its second anniversary on the surface of Mars Saturday, Feb. 18. Since arriving at Jezero Crater in 2021, the six-wheeled, nuclear-powered rover has been examining geologic features and collecting samples of the Red Planet that are central to the first step of the NASA-ESA (European Space Agency) Mars Sample Return campaign. Scientists want to study Martian samples with powerful lab equipment on Earth to search for signs of ancient microbial life and to better understand the processes that have shaped the surface of Mars.
+        </h3>
+        <h3>
+            “Anniversaries are a time of reflection and celebration, and the Perseverance team is doing a lot of both,” said Perseverance project scientist Ken Farley of Caltech in Pasadena. “Perseverance has inspected and performed data collection on hundreds of intriguing geologic features, collected 15 rock cores, and created the first sample depot on another world. With the start of the next science campaign, known as ‘Upper Fan,’ on Feb. 15, we expect to be adding to that tally very soon.” 
+        </h3>
+        <div class="pg2_img2">
+            <img src="./planet/Mars/img/2pg_img2.jpg" alt="화성탐사사진1">
+        </div>
+    </div>
     <div class="pg pg3"></div>
     <!-- 3. 하단영역 -->
     <div id="info">
