--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -55,6 +55,14 @@
     <!-- 2. 메인영역 -->
     <div class="pg pg1">
         <video class="vd_mars" src="./planet/Mars/img/Mars_video.mp4" autoplay muted></video>
+
+        <div class="model">
+            <h2>Mars 3D model</h2>
+            <iframe class="imodel" src="https://solarsystem.nasa.gov/gltf_embed/2372" frameborder="0" autoplay muted></iframe>
+            <h3>
+                Mars is the fourth planet from the Sun – a dusty, cold, desert world with a very thin atmosphere. Mars is also a dynamic planet with seasons, polar ice caps, canyons, extinct volcanoes, and evidence that it was even more active in the past.
+            </h3>
+        </div>
     </div>
     <div class="pg pg2">
         <h2>Moon to Mars</h2>
