--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/temp.html
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/temp.html
@@ -16,6 +16,8 @@
         <link rel="stylesheet" href="./css/temp.css" />
         <!-- 외부JS넣기 -->
         <!-- <script src="./js/main.js"></script> -->
+        <!-- 링크시스템 JS -->
+        <script src="./js/linksys.js"></script>
     </head>
     <body>
         <!-- 1.상단영역 -->
