--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/index.html
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/index.html
@@ -12,6 +12,8 @@
         <link rel="shortcut icon" href="./images/icon.jpg" type="image/x-icon" />
         <!-- 아이콘CDN -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fontisto@v3.0.4/css/fontisto/fontisto.min.css" />
+        <!-- 링크시스템 JS -->
+        <script src="./js/linksys.js"></script>
         <!-- 외부CSS넣기 -->
         <link rel="stylesheet" href="./css/main.css" />
         <script src="./js/main.js"></script>
