--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -31,6 +31,7 @@
             <!-- 1-2.GNB메뉴 -->
             <nav class="gnb">
                 <ul>
+                    <li><img src="./img/orrery_icon.svg" alt=""></li>
                     <li><a href="#">Jupiter</a></li>
                     <li><a href="#">Mercury</a></li>
                     <li><a href="#">Sun</a></li>
@@ -53,6 +54,7 @@
     </div>
 
     <!-- 2. 메인영역 -->
+    <!-- 2-1. mars 1page -->
     <div class="pg pg1">
         <video class="vd_mars" src="./planet/Mars/img/Mars_video.mp4" autoplay muted></video>
 
@@ -64,6 +66,8 @@
             </h3>
         </div>
     </div>
+
+    <!-- 2-2. mars 2page -->
     <div class="pg pg2">
         <h2>Moon to Mars</h2>
         <div class="arti arti1">
@@ -84,7 +88,14 @@
             </div>
         </div>
     </div>
-    <div class="pg pg3"></div>
+
+    <!-- 2-3.mars 3page -->
+    <div class="pg pg3">
+       <iframe src="https://solarsystem.nasa.gov/gltf_embed/2398">
+       <iframe src="https://solarsystem.nasa.gov/gltf_embed/2371">
+       <iframe src="https://solarsystem.nasa.gov/gltf_embed/2370">
+       <iframe src="https://solarsystem.nasa.gov/gltf_embed/2361">
+    </div>
     <!-- 3. 하단영역 -->
     <div id="info">
         <footer class="info ibx">
