--- a/팀프_메인구현소스/main.html
+++ b/팀프_메인구현소스/main.html
@@ -154,7 +154,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="./sub_Mars.html">
                                 <img src="./img/mars.png" alt="Mars">
                                 <span>Mars</span>
                             </a>
