--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -59,7 +59,7 @@
         <video class="vd_mars" src="./planet/Mars/img/Mars_video.mp4" autoplay muted></video>
 
         <div class="model">
-            <h2>Mars 3D model</h2>
+            <h2>Interoduce Mars!</h2>
             <iframe class="imodel" src="https://solarsystem.nasa.gov/gltf_embed/2372" frameborder="0" autoplay muted></iframe>
             <h3>
                 Mars is the fourth planet from the Sun – a dusty, cold, desert world with a very thin atmosphere. Mars is also a dynamic planet with seasons, polar ice caps, canyons, extinct volcanoes, and evidence that it was even more active in the past.
@@ -91,10 +91,23 @@
 
     <!-- 2-3.mars 3page -->
     <div class="pg pg3">
-       <iframe src="https://solarsystem.nasa.gov/gltf_embed/2398">
-       <iframe src="https://solarsystem.nasa.gov/gltf_embed/2371">
-       <iframe src="https://solarsystem.nasa.gov/gltf_embed/2370">
-       <iframe src="https://solarsystem.nasa.gov/gltf_embed/2361">
+        <div class="mars_item">
+            <div class="M_items mars_item1">
+                <iframe class="Mars3d Mars3d1" src="https://solarsystem.nasa.gov/gltf_embed/2398"></iframe>
+                <div class="mars_copy3">
+                    <h2>test</h2>
+                </div>
+            </div>
+            <div class="M_items mars_item2">
+                <iframe class="Mars3d Mars3d2" src="https://solarsystem.nasa.gov/gltf_embed/2371"></iframe>
+            </div>
+            <div class="M_items mars_item3">
+                <iframe class="Mars3d Mars3d3" src="https://solarsystem.nasa.gov/gltf_embed/2370"></iframe>
+            </div>
+            <div class="M_items mars_item4">
+                <iframe class="Mars3d Mars3d4" src="https://solarsystem.nasa.gov/gltf_embed/2361"> --></iframe>
+            </div>
+        </div>
     </div>
     <!-- 3. 하단영역 -->
     <div id="info">
