--- a/001.HTML학습/05.Nav_PJ/nav06.html
+++ b/001.HTML학습/05.Nav_PJ/nav06.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>6.가로네비 서브별 드롭다운 전체창</title>
+    <title>유형6. 가로네비 서브별 드롭다운 전체창</title>
     <!-- 메인CSS -->
     <link rel="stylesheet" href="./nav06/css/common.css">
     <!-- GNB데이터 JS -->
@@ -15,13 +15,17 @@
     <!-- 1. 상단영역 -->
     <div id="top">
         <header class="ibx top">
-            <!-- 1-1. 탑메뉴영역 -->
+            <!-- 1-1.탑메뉴영역 -->
             <div class="tmenu">
-                
+                <a id="logo" href="#">
+                    <img src="./nav06/img_nav06/logo.png" alt="">
+                </a>
             </div>
-            <!-- 1-2. GNB영역 -->
+            <!-- 1-2.GNB영역 -->
             <nav class="gnb"></nav>
         </header>
     </div>
+
+    
 </body>
 </html>
