--- a/001.HTML학습/05.Nav_PJ/nav06.html
+++ b/001.HTML학습/05.Nav_PJ/nav06.html
@@ -24,6 +24,8 @@
             <!-- 1-2.GNB영역 -->
             <nav class="gnb"></nav>
         </header>
+        <!-- GNB배경박스 -->
+        <div class="bgbx"></div>
     </div>
 
     
