--- a/005.jQuery학습/002.실전연습/01_SlideChangeStage/onePage.html
+++ b/005.jQuery학습/002.실전연습/01_SlideChangeStage/onePage.html
@@ -6,6 +6,9 @@
     <title>One Page Scroll</title>
     <style>
         html{
+            /* 부드러운 스크롤 적용!(스크롤애니메이션)
+            -> 스크롤이동시간, 이징가속도는 조절할 수 없다
+            제이쿼리 코딩으로 이것을 조절할 예정임! */
             scroll-behavior: smooth;
         }
         html,
@@ -101,8 +104,9 @@
         .gnb li{
             margin: 0 7px;
         }
-        /* 메뉴에 마우스 오버시 */
-        .gnb a:hover{
+        /* 메뉴에 마우스 오버시 + li.on 인경우*/
+        .gnb a:hover,
+        .gnb li.on a{
             display: inline-block;/* 트랜스폼적용위해 */
             color: lime;
             text-decoration: overline;/* 윗줄 */
