--- a/001.HTML학습/05.Nav_PJ/nav06.html
+++ b/001.HTML학습/05.Nav_PJ/nav06.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>유형6. 가로네비 서브별 드롭다운 전체창</title>
     <!-- 메인CSS -->
-    <link rel="stylesheet" href="./nav06/css/common.css">
+    <link rel="stylesheet" href="./nav06/css/main.css">
     <!-- GNB데이터 JS -->
     <script src="./nav06/js/mdata.js"></script>
     <!-- 공통 JS -->
     <script src="./nav06/js/common.js"></script>
+    <!-- 배너 JS -->
+    <script src="./nav06/js/ban.js"></script>
 </head>
 <body>
     <!-- 1. 상단영역 -->
@@ -27,6 +29,24 @@
         <!-- GNB배경박스 -->
         <!-- <div class="bgbx"></div> -->
     </div>
+    <!-- 2. 컨텐츠영역 -->
+    <main class="cont">
+        <!-- 2-1. 배너박스 -->
+        <div class="banbx">
+            <!-- 배너컨텐츠박스 -->
+            <div class="bancont">
+                
+            </div>
+
+            <!--이동버튼-->
+            <a href="#" class="abtn ab1">
+                <span class="ir">왼쪽버튼</span>
+            </a>
+            <a href="#" class="abtn ab2">
+                <span class="ir">오른쪽버튼</span>
+            </a>
+        </div>
+    </main>
 
     
 </body>
