--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="./css/mainmedia.css" />
     <!-- 외부JS삽입 -->
     <script src="./js/main.js"></script>
+    <!-- 화성 JS 삽입 -->
+    <script src="./js/sub_Mars.js"></script>
 </head>
 <body>
 
@@ -60,10 +62,12 @@
 
         <div class="model">
             <h2>Interoduce Mars!</h2>
-            <iframe class="imodel" src="https://solarsystem.nasa.gov/gltf_embed/2372" frameborder="0" width="100%"></iframe>
-            <h3>
-                Mars is the fourth planet from the Sun – a dusty, cold, desert world with a very thin atmosphere. Mars is also a dynamic planet with seasons, polar ice caps, canyons, extinct volcanoes, and evidence that it was even more active in the past.
-            </h3>
+            <!-- <iframe class="imodel" src="https://solarsystem.nasa.gov/gltf_embed/2372" frameborder="0" width="100%"></iframe> -->
+            <div class="mars_copy1">
+                <h3>
+                    Mars is the fourth planet from the Sun – a dusty, cold, desert world with a very thin atmosphere. Mars is also a dynamic planet with seasons, polar ice caps, canyons, extinct volcanoes, and evidence that it was even more active in the past.
+                </h3>
+            </div>
         </div>
     </div>
 
@@ -93,27 +97,39 @@
     <div class="pg pg3">
         <div class="mars_item">
             <div class="M_items mars_item1">
-                <iframe class="Mars3d Mars3d1" src="https://solarsystem.nasa.gov/gltf_embed/2398"></iframe>
+                <!-- <iframe class="Mars3d Mars3d1" src="https://solarsystem.nasa.gov/gltf_embed/2398"></iframe> -->
                 <div class="mars_copy3">
                     <h2>test</h2>
+                </div>
+                <div class="m_dis">
+                    <h3></h3>
                 </div>
             </div>
             <div class="M_items mars_item2">
-                <iframe class="Mars3d Mars3d2" src="https://solarsystem.nasa.gov/gltf_embed/2371"></iframe>
+                <!-- <iframe class="Mars3d Mars3d2" src="https://solarsystem.nasa.gov/gltf_embed/2371"></iframe> -->
                 <div class="mars_copy3">
                     <h2>test</h2>
+                </div>
+                <div class="m_dis">
+                    <h3></h3>
                 </div>
             </div>
             <div class="M_items mars_item3">
-                <iframe class="Mars3d Mars3d3" src="https://solarsystem.nasa.gov/gltf_embed/2370"></iframe>
+                <!-- <iframe class="Mars3d Mars3d3" src="https://solarsystem.nasa.gov/gltf_embed/2370"></iframe> -->
                 <div class="mars_copy3">
                     <h2>test</h2>
                 </div>
+                <div class="m_dis">
+                    <h3>dadadad</h3>
+                </div>
             </div>
             <div class="M_items mars_item4">
-                <iframe class="Mars3d Mars3d4" src="https://solarsystem.nasa.gov/gltf_embed/2361"></iframe>
+                <!-- <iframe class="Mars3d Mars3d4" src="https://solarsystem.nasa.gov/gltf_embed/2361"></iframe> -->
                 <div class="mars_copy3">
                     <h2>test</h2>
+                </div>
+                <div class="m_dis">
+                    <h3></h3>
                 </div>
             </div>
         </div>
