--- a/004.JS학습/JS실험실/06.중간스크롤가로이동.html
+++ b/004.JS학습/JS실험실/06.중간스크롤가로이동.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS실험실: 06.중간스크롤가로이동</title>
     <style>
+        html{
+            scroll-behavior: smooth;
+        }
         html,body{
             margin: 0;
             padding: 0;
