--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/02.클래스선택자.html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/02.클래스선택자.html
@@ -1,58 +1,50 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title> 클래스 선택자  </title>
-<script src="jquery-1.7.2.min.js"></script>
-	<script>
-		$(document).ready(function(){
-			// 미션: 클래스가 group인 요소를 선택하여
-			// 클릭할 경우 배경색을 lime
-			// 글자크기는 52px로 변경하시오.
-			// 단, transition 을 "all .6s"로 설정하여 애니메이션 되게 하시오.
-			
-			
-			
-			
-			
-		});////////////  jQB /////////////////////////
-	
-	
-	
-	
-	
-	
-	</script>
-	
-	
-	
-	
-	
-</head>
-  
-<body>
+    <head>
+        <meta charset="utf-8" />
+        <title>클래스 선택자</title>
+        <script src="../jquery-3.6.3.min.js"></script>
+        <script>
+            $(() => {
+                // 미션: 클래스가 group인 요소를 선택하여
+                // li를 클릭할 경우 배경색을 lime
+                // 글자크기는 52px로 변경하시오.
+                // 단, transition 을 "all .6s"로 설정하여 애니메이션 되게 하시오.
+                $(".group li").click(
+                    // function(){
+                    (e) => { // e는 이벤트 전달변수!
+                        // 클릭된 li자신 -> this!
+                        // 화살표함수 this는 event.currentTarget 사용!
+                        console.log(e.currentTarget);
 
-<div id="container">
+                        // $(this).css({
+                        $(e.currentTarget).css({
+                            backgroundColor: "lime",
+                            fontSize: "52px",
+                            transition: "all .6s",
+                        }); /////////// css ////////////
+                    }
+                ); /////////// click ////////////
+            });
+        </script>
+    </head>
 
- <header>
-   <h2> Welcome mySite </h2>
- </header>
+    <body>
+        <div id="container">
+            <header>
+                <h2>Welcome mySite</h2>
+            </header>
 
- <nav>
-   <ul class="group">
-       <li id="first">One</li>
-       <li id="second">Two</li>
-       <li id="third">Three</li>
-  </ul>
- </nav>
+            <nav>
+                <ul class="group">
+                    <li id="first">One</li>
+                    <li id="second">Two</li>
+                    <li id="third">Three</li>
+                </ul>
+            </nav>
+        </div>
 
-</div>
-
-<!---------- jQuery code Start ---------->
-<script>
-
-</script>
-
-</body>
+        <!---------- jQuery code Start ---------->
+        <script></script>
+    </body>
 </html>
-
