--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/03.ID선택자.html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/03.ID선택자.html
@@ -1,58 +1,128 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title> ID 선택자  </title>
-<!-- jQuery library -->
-<script src="jquery-1.7.2.min.js"></script>
-<script>
-$(document).ready(function(e) {
-    // 미션: h2요소를 클릭하면
-	// 1. 아이디가 sub인 요소의 글자를 "이승기" 라고 쓰고 배경색은 노란색, 글자색은 파란색, 테두리는 1px 녹색 , 글자크기 42px로 변경하시오.
-	// 2. 아이디가 main인 요소의 글자를 "공유"라고 쓰고 배경색은 파란색, 글자색은 흰색, 테두리는 3px 노란색, 글자크기는 52px로 변경하시오.
-	// 3. 아이디가 total인 요소의 글자를 "싸랑해요~!"라고 쓰고 배경색은 검은색, 글자색은 빨간색, 테두리는 2px 보라색, 글자크기는 152px로 변경하시오.
-	// 위의 세가지 아이디를 1초간격으로 애니메이션 설정하시오(transition) - 기본은 "all .8s 지연시간"
-	
-	// 텍스트 변경하는 jQuery 메서드
-	// $(선택자).text(글자)
-	
-	
-		
-	});////////// click //////////////////////
-	
-	
-	
-	
-	
-	
-});//jQuery실행구역
-</script>
-</head>
-  
-<body>
+    <head>
+        <meta charset="utf-8" />
+        <title>ID 선택자</title>
+        <!-- jQuery library -->
+        <script src="../jquery-3.6.3.min.js"></script>
+        <!-- 이징과 색상 매니메이션을 위해 제이쿼리 UI 넣기! -->
+        <script src="../jquery-ui.min.js"></script>
+        <script>
+          /******************************************************* 
+            [ 제이쿼리 글자넣기 메서드 : text() ]
+            $(선택자).text(넣을글자).css()
+            -> 같은 선택요소 뒤에 제이쿼리 메서드를 이어서
+            코딩하는 방법을 메서드 체인이라고 한다!
+            주어가 하나! 나는 밥을 먹고 공부를 했다!
+            [ 제이쿼리 애니메이션 메서드 : animate() ]
+            -> animate({CSS설정},시간,이징,함수)
+            (1) CSS설정 : CSS요소 변경
+            (2) 시간 : 1/1000초(단위안씀) -> 시간생략시 기본값 400
+            (3) 이징 : 제이쿼리 이징(https://easings.net/ko)
+                -> 이징은 반드시 제이쿼리 UI가 있어야함!
+            (4) 함수 : 콜백함수(애니메이션 후 실행함수)
 
-<div id="container">
+            [ 애니메이션 속성 셋팅시 주의사항 ]
 
- <header>
-   <h2> 여기를 클릭하세요~!</h2>
- </header>
+            -> 배경색이나 보더 속성 변경시에 
+            개별 속성을 셋팅해야 적용됨
 
- <nav>
-   <ul class="list">
-       <li id="sub">One</li>
-       <li id="main">Two</li>
-       <li id="total">Three</li>
-  </ul>
- </nav>
+            예) 
+            [배경색]
+            {background:"red"} X -> {backgroundColor:"red"} ○
 
-</div>
+            [보더]
+            border는 초기값 셋팅후
+            {borderWidth:"10px", borderColor:"orange"}
+            -> 보더 스타일은 애니메이션 대상이 아님!(초기값에 셋팅함!)
 
-<!---------- jQuery code Start ---------->
+            [ 애니메이션 지연 메서드 : delay() ]
+            -> delay(시간) : 시간은 1/1000초
+            -> 애니메이션 메서드 앞에서 작동한다!
+            -> fadeIn(), slideDown() 등
+          *******************************************************/
+            $(document).ready(function (e) {
+                $("h2").click(() => {
+                    // 미션: h2요소를 클릭하면
+                    // 1. 아이디가 sub인 요소의 글자를 "이승기" 라고 쓰고 배경색은 노란색, 글자색은 파란색, 테두리는 1px 녹색 , 글자크기 42px로 변경하시오.
+                    $("#sub").text("이승기")
+                    /* animate를 위한 보더 초기값 셋팅 필요! */
+                    .css({border:"1px solid #000"})
+                    .animate({
+                        backgroundColor: "yellow",
+                        color: "blue",
+                        borderWidth: "10px",
+                        borderColor: "green",
+                        borderStyle: "dashed",
+                        // border: "1px solid green",
+                        fontSize: "42px",
+                    },800); ///////// animate //////////////
+                    // .css({
+                    //     backgroundColor: "yellow",
+                    //     color: "blue",
+                    //     border: "1px solid green",
+                    //     fontSize: "42px",
+                    //     transition: "all .8s",
+                    // }); ///////// css //////////////
 
-<script>
+                    // 2. 아이디가 main인 요소의 글자를 "공유"라고 쓰고 배경색은 파란색, 글자색은 흰색, 테두리는 3px 노란색, 글자크기는 52px로 변경하시오.
+                    $("#main").text("공유")
+                    .css({border:"3px solid yellow"})
+                    .delay(1000) // 지연시간(애니메이션함수 앞에서!)
+                    .animate({
+                        backgroundColor: "blue",
+                        color: "#fff",
+                        borderColor: "yellow",
+                        fontSize: "52px",
+                    },800); /////////// animate ////////////
+                    // .css({
+                    //     backgroundColor: "blue",
+                    //     color: "#fff",
+                    //     border: "3px solid yellow",
+                    //     fontSize: "52px",
+                    //     transition: "all .8s 1s",
+                    // }); /////////// css ////////////
 
-</script>
+                    // 3. 아이디가 total인 요소의 글자를 "싸랑해요~!"라고 쓰고 배경색은 검은색, 글자색은 빨간색, 테두리는 2px 보라색, 글자크기는 152px로 변경하시오.
+                    $("#total").text("싸랑해요~!")
+                    .delay(2000) // 지연시간 2초
+                    .animate({
+                        backgroundColor: "#000",
+                        color: "red",
+                        border: "2px solid purple",
+                        fontSize: "152px",
+                    },800); /////////// animate ////////////
+                }); ////////////// click ///////////
+                // .css({
+                //         backgroundColor: "#000",
+                //         color: "red",
+                //         border: "2px solid purple",
+                //         fontSize: "152px",
+                //         transition: "all .8s 2s",
+                //     }); /////////// css ////////////
+                // 위의 세가지 아이디를 1초간격으로 애니메이션 설정하시오(transition) - 기본은 "all .8s 지연시간"
 
-</body>
+            }); //jQuery실행구역
+        </script>
+    </head>
+
+    <body>
+        <div id="container">
+            <header>
+                <h2>여기를 클릭하세요~!</h2>
+            </header>
+
+            <nav>
+                <ul class="list">
+                    <li id="sub">One</li>
+                    <li id="main">Two</li>
+                    <li id="total">Three</li>
+                </ul>
+            </nav>
+        </div>
+
+        <!---------- jQuery code Start ---------->
+
+        <script></script>
+    </body>
 </html>
-
