--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -8,14 +8,13 @@
     <link href='./img/favicon-32x32.png' rel='icon' sizes='32x32' type='image/png'>
     <!-- 폰트어썸 CDN CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <!-- 서브페이지css_mars -->
-    <link rel="stylesheet" href="./css/sub_Mars.css">
     <!-- 외부CSS 불러오기 -->
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <!-- 서브페이지css_mars -->
+    <link rel="stylesheet" href="./css/sub_Mars.css">
     <!-- 외부 미디어쿼리 CSS 불러오기 -->
     <link rel="stylesheet" href="./css/mainmedia.css" />
-    <!-- 외부JS삽입 -->
-    <script src="./js/main.js"></script>
     <!-- 화성 JS 삽입 -->
     <script src="./js/sub_Mars.js"></script>
 </head>
