--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -6,6 +6,7 @@
     <title>SOLAR SYSTEM</title>
     <!-- Favicon -->
     <link href='./img/favicon-32x32.png' rel='icon' sizes='32x32' type='image/png'>
+    <link rel="preload" href="https://solarsystem.nasa.gov/gltf_embed/2372" as="document" crossorigin="crossorigin">
     <!-- 폰트어썸 CDN CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <!-- 외부CSS 불러오기 -->
@@ -61,7 +62,7 @@
 
         <div class="model">
             <h2>Interoduce Mars!</h2>
-            <iframe class="imodel" src="https://solarsystem.nasa.gov/gltf_embed/2372" frameborder="0" width="100%"></iframe>
+            <iframe class="imodel" src="https://solarsystem.nasa.gov/gltf_embed/2372" frameborder="0" width="100%" loading="eager"></iframe>
             <div class="mars_copy1">
                 <h3>
                     Mars is the fourth planet from the Sun – a dusty, cold, desert world with a very thin atmosphere. Mars is also a dynamic planet with seasons, polar ice caps, canyons, extinct volcanoes, and evidence that it was even more active in the past.
