--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/05.전체선택자.html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/05.전체선택자.html
@@ -9,7 +9,14 @@
 $(document).ready(function(e) {
     // 미션: body를 클릭하면 모든 요소를 선택하여(*) 
 	// 인터넷으로 검색한 이미지 주소를 배경이미지로 설정하여 width: 200px, height: 200px 로 설정하시오.
-	
+	$("body").click(()=>{
+    $("body *")
+    .css({
+      background : "url(https://cdn.pixabay.com/photo/2023/01/22/16/45/nature-7736939_960_720.jpg) no-repeat center/cover",
+      width : "200px",
+      height : "200px"
+    })
+  });
 	
 	
 });//jQuery실행구역
