--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -17,7 +17,7 @@
     <!-- 외부 미디어쿼리 CSS 불러오기 -->
     <link rel="stylesheet" href="./css/mainmedia.css" />
     <!-- 화성 JS 삽입 -->
-    <script src="./js/sub_Mars.js"></script>
+    <script defer src="./js/sub_Mars.js"></script>
 </head>
 <body>
 
@@ -78,15 +78,19 @@
             <div class="pg2_img1">
                 <img src="./planet/Mars/img/2pg_img1.jpg" alt="화성탐사사진1">
             </div>
-            <h3>
-                After completing the first sample depot on another world, the rover continues its hunt for Mars rocks worthy of study on Earth.<br><br>
-                NASA’s Perseverance rover will celebrate its second anniversary on the surface of Mars Saturday, Feb. 18. Since arriving at Jezero Crater in 2021, the six-wheeled, nuclear-powered rover has been examining geologic features and collecting samples of the Red Planet that are central to the first step of the NASA-ESA (European Space Agency) Mars Sample Return campaign. Scientists want to study Martian samples with powerful lab equipment on Earth to search for signs of ancient microbial life and to better understand the processes that have shaped the surface of Mars.
-            </h3>
+            <div class="arti1_copy">
+                <h3>
+                    After completing the first sample depot on another world, the rover continues its hunt for Mars rocks worthy of study on Earth.<br><br>
+                    NASA’s Perseverance rover will celebrate its second anniversary on the surface of Mars Saturday, Feb. 18. Since arriving at Jezero Crater in 2021, the six-wheeled, nuclear-powered rover has been examining geologic features and collecting samples of the Red Planet that are central to the first step of the NASA-ESA (European Space Agency) Mars Sample Return campaign. Scientists want to study Martian samples with powerful lab equipment on Earth to search for signs of ancient microbial life and to better understand the processes that have shaped the surface of Mars.
+                </h3>
+            </div>
         </div>
         <div class="arti arti2">
-            <h3>
-                “Anniversaries are a time of reflection and celebration, and the Perseverance team is doing a lot of both,” said Perseverance project scientist Ken Farley of Caltech in Pasadena. “Perseverance has inspected and performed data collection on hundreds of intriguing geologic features, collected 15 rock cores, and created the first sample depot on another world. With the start of the next science campaign, known as ‘Upper Fan,’ on Feb. 15, we expect to be adding to that tally very soon.”
-            </h3>
+            <div class="arti2_copy">
+                <h3>
+                    “Anniversaries are a time of reflection and celebration, and the Perseverance team is doing a lot of both,” said Perseverance project scientist Ken Farley of Caltech in Pasadena. “Perseverance has inspected and performed data collection on hundreds of intriguing geologic features, collected 15 rock cores, and created the first sample depot on another world. With the start of the next science campaign, known as ‘Upper Fan,’ on Feb. 15, we expect to be adding to that tally very soon.”
+                </h3>
+            </div>
             <div class="pg2_img2">
                 <img src="./planet/Mars/img/2pg_img2.jpg" alt="화성탐사사진1">
             </div>
@@ -120,7 +124,7 @@
                     <h2>test</h2>
                 </div>
                 <div class="m_dis">
-                    <h3>dadadad</h3>
+                    <h3></h3>
                 </div>
             </div>
             <div class="M_items mars_item4">
