--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -64,7 +64,7 @@
             <h2>Interoduce Mars!</h2>
             <iframe class="imodel" src="https://solarsystem.nasa.gov/gltf_embed/2372" frameborder="0" width="100%" loading="eager"></iframe>
             <div class="mars_copy1">
-                <h3>
+                <h3 class="copyFt">
                     Mars is the fourth planet from the Sun – a dusty, cold, desert world with a very thin atmosphere. Mars is also a dynamic planet with seasons, polar ice caps, canyons, extinct volcanoes, and evidence that it was even more active in the past.
                 </h3>
             </div>
@@ -102,7 +102,7 @@
         <div class="mars_item">
             <div class="M_items mars_item1">
                 <!-- <iframe class="Mars3d Mars3d1" src="https://solarsystem.nasa.gov/gltf_embed/2398"></iframe> -->
-                <div class="mars_copy3">
+                <div class="mars_copy3 copyFt">
                     <h2>test</h2>
                 </div>
                 <div class="m_dis">
