--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -62,9 +62,9 @@
 
         <div class="model">
             <h2>Interoduce Mars!</h2>
-            <iframe class="imodel" src="https://solarsystem.nasa.gov/gltf_embed/2372" frameborder="0" width="100%" loading="eager"></iframe>
+            <iframe class="imodel copyFt" src="https://solarsystem.nasa.gov/gltf_embed/2372" frameborder="0" width="100%" loading="eager"></iframe>
             <div class="mars_copy1">
-                <h3 class="copyFt">
+                <h3 class="copyFt md_h3">
                     Mars is the fourth planet from the Sun – a dusty, cold, desert world with a very thin atmosphere. Mars is also a dynamic planet with seasons, polar ice caps, canyons, extinct volcanoes, and evidence that it was even more active in the past.
                 </h3>
             </div>
