--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -101,36 +101,36 @@
     <div class="pg pg3">
         <div class="mars_item">
             <div class="M_items mars_item1">
-                <iframe class="Mars3d Mars3d1" src="https://solarsystem.nasa.gov/gltf_embed/2398"></iframe>
+                <!-- <iframe class="Mars3d Mars3d1" src="https://solarsystem.nasa.gov/gltf_embed/2398"></iframe> -->
                 <div class="mars_copy3">
-                    <h2>test</h2>
+                    <h2></h2>
                 </div>
                 <div class="m_dis">
                     <h3>hihi</h3>
                 </div>
             </div>
             <div class="M_items mars_item2">
-                <iframe class="Mars3d Mars3d2" src="https://solarsystem.nasa.gov/gltf_embed/2371"></iframe>
+                <!-- <iframe class="Mars3d Mars3d2" src="https://solarsystem.nasa.gov/gltf_embed/2371"></iframe> -->
                 <div class="mars_copy3">
-                    <h2>test</h2>
+                    <h2></h2>
                 </div>
                 <div class="m_dis">
                     <h3></h3>
                 </div>
             </div>
             <div class="M_items mars_item3">
-                <iframe class="Mars3d Mars3d3" src="https://solarsystem.nasa.gov/gltf_embed/2370"></iframe>
+                <!-- <iframe class="Mars3d Mars3d3" src="https://solarsystem.nasa.gov/gltf_embed/2370"></iframe> -->
                 <div class="mars_copy3">
-                    <h2>test</h2>
+                    <h2></h2>
                 </div>
                 <div class="m_dis">
                     <h3></h3>
                 </div>
             </div>
             <div class="M_items mars_item4">
-                <iframe class="Mars3d Mars3d4" src="https://solarsystem.nasa.gov/gltf_embed/2361"></iframe>
+                <!-- <iframe class="Mars3d Mars3d4" src="https://solarsystem.nasa.gov/gltf_embed/2361"></iframe> -->
                 <div class="mars_copy3">
-                    <h2>test</h2>
+                    <h2></h2>
                 </div>
                 <div class="m_dis">
                     <h3></h3>
