--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                     <li>
                         <a href="./001.HTML학습/06.CGV_PJ/003.구현소스/index.html" target="_blank">CGV PJ</a>
                     </li>
+                    <li>
+                        <a href="./팀프_메인구현소스/index.html" target="_blank">팀프로젝트(NASA)</a>
+                    </li>
                 </ol>
             </section>
             <!-- 2. 개별프로젝트 링크파트 -->
