--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -39,7 +39,7 @@
                     <li><a href="#">Mercury</a></li>
                     <li><a href="#">Sun</a></li>
                     <li><a href="#">Earth</a></li>
-                    <li><a href="#">Mars</a></li>
+                    <li><a href="./sub_Mars.html">Mars</a></li>
                     <li><a href="#">Saturn</a></li>
                     <li>
                         <div class="sbx">
