--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -17,7 +17,6 @@
     <!-- 외부 미디어쿼리 CSS 불러오기 -->
     <link rel="stylesheet" href="./css/mainmedia.css" />
     <!-- 화성 JS 삽입 -->
-    <!-- <script src="./js/data_pg3.js"></script> -->
     <script defer src="./js/sub_Mars.js"></script>
 </head>
 <body>
@@ -59,6 +58,9 @@
     <!-- 2. 메인영역 -->
     <!-- 2-1. mars 1page -->
     <div class="pg pg1">
+        <div class="title">
+            <h1>MARS</h1>
+        </div>
         <video class="vd_mars" src="./planet/Mars/img/Mars_video.mp4" autoplay muted></video>
 
         <div class="model">
