--- a/팀프_메인구현소스/main.html
+++ b/팀프_메인구현소스/main.html
@@ -33,7 +33,7 @@
                     <li><a href="#">Jupiter</a></li>
                     <li><a href="#">Mercury</a></li>
                     <li><a href="#">Sun</a></li>
-                    <li><a href="#">Earth</a></li>
+                    <li><a href="./sub_Earth.html">Earth</a></li>
                     <li><a href="./sub_Mars.html">Mars</a></li>
                     <li><a href="#">Saturn</a></li>
                     <li>
@@ -142,7 +142,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="./sub_Earth.html">
                                 <img src="./img/earth.png" alt="Earth">
                                 <span>Earth</span>
                             </a>
