--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -58,11 +58,11 @@
     <!-- 2. 메인영역 -->
     <!-- 2-1. mars 1page -->
     <div class="pg pg1">
-        <div class="title">
+        <div class="title_m">
             <h1>MARS</h1>
         </div>
         <video class="vd_mars" src="./planet/Mars/img/Mars_video.mp4" autoplay muted></video>
-
+        
         <div class="model">
             <h2>Interoduce Mars!</h2>
             <iframe class="imodel" src="https://solarsystem.nasa.gov/gltf_embed/2372" frameborder="0" width="100%" loading="eager"></iframe>
