--- a/팀프_메인구현소스/main.html
+++ b/팀프_메인구현소스/main.html
@@ -30,7 +30,7 @@
             <nav class="gnb">
                 <ul>
                     <li><img src="./img/orrery_icon.svg" alt=""></li>
-                    <li><a href="#">Jupiter</a></li>
+                    <li><a href="./sub_jupiter.html">Jupiter</a></li>
                     <li><a href="#">Mercury</a></li>
                     <li><a href="#">Sun</a></li>
                     <li><a href="./sub_Earth.html">Earth</a></li>
@@ -136,7 +136,7 @@
                 <div class="mbx">
                     <ul id="mslide">
                         <li>
-                            <a href="#">
+                            <a href="./sub_jupiter.html">
                                 <img src="./img/jupiter_new.png" alt="Jupiter">
                                 <span>Jupiter</span>
                             </a>
