--- a/팀프_메인구현소스/sub_Mars.html
+++ b/팀프_메인구현소스/sub_Mars.html
@@ -34,10 +34,10 @@
             <nav class="gnb">
                 <ul>
                     <li><img src="./img/orrery_icon.svg" alt=""></li>
-                    <li><a href="#">Jupiter</a></li>
+                    <li><a href="./sub_jupiter.html">Jupiter</a></li>
                     <li><a href="#">Mercury</a></li>
                     <li><a href="#">Sun</a></li>
-                    <li><a href="#">Earth</a></li>
+                    <li><a href="./sub_Earth.html">Earth</a></li>
                     <li><a href="./sub_Mars.html">Mars</a></li>
                     <li><a href="#">Saturn</a></li>
                     <li>
@@ -152,13 +152,13 @@
                 <div class="mbx">
                     <ul id="mslide">
                         <li>
-                            <a href="#">
+                            <a href="./sub_jupiter.html">
                                 <img src="./img/jupiter_new.png" alt="Jupiter">
                                 <span>Jupiter</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="./sub_Earth.html">
                                 <img src="./img/earth.png" alt="Earth">
                                 <span>Earth</span>
                             </a>
@@ -170,7 +170,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="./sub_Mars.html">
                                 <img src="./img/mars.png" alt="Mars">
                                 <span>Mars</span>
                             </a>
