--- a/solarsystem/sub/mars.html
+++ b/solarsystem/sub/mars.html
@@ -65,7 +65,7 @@
         <video class="vd_mars" src="./subimg/mars_video.mp4" autoplay muted></video>
         
         <div class="model">
-            <h2>Interoduce Mars!</h2>
+            <h2>Introduce Mars!</h2>
             <iframe class="imodel" src="https://solarsystem.nasa.gov/gltf_embed/2372" frameborder="0" width="100%" loading="eager"></iframe>
             <div class="mars_copy1">
                 <h3 class= "md_h3">
