--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/25.prev.html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/25.prev.html
@@ -4,14 +4,53 @@
 <meta charset="utf-8">
 <title> Traversal- prev </title>
 <!-- jQuery library -->
-<script src="jquery-1.7.2.min.js"></script>
-<script src="jquery-ui-1.8.23.custom.min.js"></script>
+<script src="../jquery-3.6.3.min.js"></script>
+<script src="../jquery-ui.min.js"></script>
 <script>
 $(document).ready(function(e) {
+
+  // [3. prev() -  선택요소 이전형제요소 선택]
+  // [4. prevAll() -  선택요소 이전형제요소 전부선택]
 	
 	// 미션: 마지막 p태그를 클릭하면 0.5초 간격으로 이전 형제요소의 배경색을 차례로 넣으시오.
+  $("#container")
+  .children("p") // 직계 p요소
+  .last() // 마지막 p요소
+  .click(function(){
+    $(this) // 클릭된 p요소
+    // .animate({CSS설정},시간,이징,함수)
+    .animate({backgroundColor:"red"},500)
+    .prev() // 앞에 있는 p요소
+    .delay(1000) // 1초후
+    .animate({backgroundColor:"yellow"},500)
+    .prev() // 앞에 있는 p요소
+    .delay(2000) // 2초후
+    .animate({backgroundColor:"lime"},500)
+    .prev() // 앞에 있는 div요소
+    .find("p") // 자손 p요소
+    .delay(3000) // 3초후
+    .animate({backgroundColor:"green"},500)
+  }); /////////// click ////////////
 	// animate() 사용.
 	// first(), last() 사용
+
+  // 추가미션:
+  // .sub 아래 마지막 p태그를 클릭하면
+  // 이전 p태그 모두를 배경색 yellow, 
+  // 가로,세로 크기 100px로 원으로 변경
+  // 애니메이션 하시오!
+  // prevAll() 사용!
+  $(".sub").find("p").last()
+  .click(function(){
+    $(this) // 마지막 p요소
+    .prevAll() // 이전 형제p 모두
+    .animate({
+      backgroundColor:"yellow",
+      width:"100px",
+      height:"100px",
+      borderRadius:"50%"
+    },1000); /// animate ///
+  }); ///////////// click //////////
 	
 	
 });//jQuery실행구역
@@ -34,10 +73,14 @@ $(document).ready(function(e) {
     <p>p:나를클릭해!</p>
 
 </div>
-<!---------- jQuery code Start ---------->
-<script>
 
-</script>
+<div class="sub">
+  <p>p</p>
+  <p>p</p>
+  <p>p</p>
+  <p>p</p>
+  <p>p:나도클릭!</p>
+</div>
 
 </body>
 </html>
