--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/33.prepend활용.html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/33.prepend활용.html
@@ -4,10 +4,22 @@
 <meta charset="utf-8">
 <title> prepend활용  </title>
 <!-- jQuery library -->
-<script src="jquery-1.7.2.min.js"></script>
+<script src="../jquery-3.6.3.min.js"></script>
 	<script>
 		$(document).ready(function(){
 			// 미션: prepend버튼을 클릭하면 #container안에있는 이미지 중 마지막 이미지를 맨앞으로 이동시키시오.
+			$("#prepend").click(()=>{
+				// 맨끝이미지
+				let last = $("#container img:last");
+
+				// 맨끝이미지 맨앞으로 이동!
+				$("#container").prepend(last);
+			}); //////////// click ////////////
+			
+			// 마지막 이미지 선택법:
+			// $("#container img:last-child")
+			// $("#container img:last")
+			// $("#container img").last() - 트래버싱 메서드
 			
 	
 			
