--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/31.append활용.html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/31.append활용.html
@@ -10,51 +10,58 @@
 		// 미션: 추가버튼을 클릭하면 이미지가 랜덤하게 #container에 추가되게하시오.
 		// 추가버튼 - #append
 
-		// 변경대상 : #container
+		// 변경대상 - #container
 		const tg = $("#container");
-		const tg2 = $("#auto");
 
 		$("#append").click(()=>{
-			
+
 			// 1~5사이의 랜덤수 만들기
-			let rdm = Math.ceil(Math.random() * 5);
-			// console.log(rdm);
+			let rdm = Math.ceil(Math.random()*5);
+			console.log("랜덤수:",rdm);
 
 			// 새로운 이미지 추가
 			tg.append(`
 				<img src="th_pic${rdm}.jpg" alt="이미지">
-			`) /////////// append ////////////
+			`); ///// append ///////
 
-		}); /////////// click ////////////
-		
-		// 추가미션 : 자동버튼(#auto)클릭 시 인터발함수로
+		}); ///////// click ///////////
+
+		// 추가미션: 자동버튼(#auto)클릭시 인터발함수로
 		// 랜덤수 이미지 계속 추가하기 기능만들기 + 멈춤버튼(#stop)
-		// 클릭 시 인터발 함수 멈추기
+		// 클릭시 인터발함수 멈추기!
 
-		// 인터발용 변수
+		// 인터발용변수
 		let autoI;
 		// 인터발관련 JS내장함수 : 
 		// setInterval(함수,시간) / clearInterval(변수)
-		
-		$("#auto").click(function(){
-		// 인터발 중복실행방지
-		if(autoI) return;
-		// autoI가 할당되면 true로 처리
-		// 할당전에는 undefined이므로 false처리
-		
+
+		// 자동버튼클릭시
+		$("#auto").click(()=>{
+
+			// 인터발 중복실행방지
+			if(autoI) return;
+			// autoI가 할당되면 true로 처리
+			// 할당전에는 undefined 이므로 false처리
+
 			autoI = setInterval(()=>{
-				$("#append").trigger("click")
+				$("#append").trigger("click");
 				// trigger(이벤트명) 메서드
-				// -> 선택요소에 이벤트를 강제발생 시키는 메서드임!
+				// -> 선택요소에 이벤트를 강제발생 시키는
+				// 메서드임!
+				// JS에서는 click() 메서드형태로 트리거함!
 			},200);
-		}); //////// click ///////////
-		
+		}); ////////// click ////////////
+
+		// 멈춤버튼클릭시
 		$("#stop").click(()=>{
+			
 			// 인터발멈추기
 			clearInterval(autoI);
+
 			// 다시 인터발 처리하도록 autoI값 설정
 			autoI = false;
-		}); //////////// click //////////////
+		}); ////////// click ////////////
+
 	
 		
 		
