--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/32.prepend.html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/32.prepend.html
@@ -1,43 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title> prepend()  </title>
-<!-- jQuery library -->
-<script src="jquery-1.7.2.min.js"></script>
-	<script>
-	$(function(){// jQB /////////////////////////////
-		
-		//미션: p태그의 글자를 클릭하면 #pic 요소의 내부에 자식요소로 웹 경로 이미지가 번갈아서 앞쪽에 추가되게하시오.
-	
-		
-		
-	});/// jQB //////////////////////////////////////
-	
-	
-	
-	
-	</script>
-</head>
- 
-<body>
+    <head>
+        <meta charset="utf-8" />
+        <title>prepend()</title>
+        <!-- jQuery library -->
+        <script src="../jquery-3.6.3.min.js"></script>
+        <script>
+            $(function () {
+                // jQB /////////////////////////////
+                // 웹이미지 경로 ///
+                let isrc = ["https://pbs.twimg.com/profile_images/1283948126974308352/DZThCpB-_400x400.jpg", "https://img.etoday.co.kr/pto_db/2020/06/600/20200610210200_1471006_646_672.jpg"]; ///// 배열 ////////////
 
-<div id="container">
-	
- <p>당신이 좋아하는 사진 2장을 번갈아 앞쪽에 추가하기 클릭!!!!!</p>
-	
-	
-	<div id="pic"></div>
-	
-	
-<!--	<img src="https://pbs.twimg.com/profile_images/834793347780796416/FRi2DPZ0_400x400.jpg" alt="이미지">-->
-	
-	
-</div>
-<!---------- jQuery code Start ---------->
-<script>
+                //미션: p태그의 글자를 클릭하면 #pic 요소의 내부에 자식요소로 웹 경로 이미지가 번갈아서 앞쪽에 추가되게하시오.
 
-</script>
+                // 배열순번변수
+                let seq = 0;
 
-</body>
+                $("p").click(() => {
+                    // 이미지 넣기 : 대상 - #pic
+                    $("#pic").prepend(`<img src="${isrc[seq]}" alt="이미지">`);
+
+                    // 다음번을 위해 배열순번변경
+                    seq === 0 ? (seq = 1) : (seq = 0);
+
+                    // 이미지크기조정
+                    $("#pic img").css({ height: "200px" });
+                }); ///////////// click /////////
+            }); /// jQB //////////////////////////////////////
+        </script>
+    </head>
+
+    <body>
+        <div id="container">
+            <p>당신이 좋아하는 사진 2장을 번갈아 앞쪽에 추가하기 클릭!!!!!</p>
+
+            <div id="pic"></div>
+
+            <!--	<img src="https://pbs.twimg.com/profile_images/834793347780796416/FRi2DPZ0_400x400.jpg" alt="이미지">-->
+        </div>
+        <!---------- jQuery code Start ---------->
+        <script></script>
+    </body>
 </html>
