--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/34.html().html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-02.메서드연습/34.html().html
@@ -7,8 +7,81 @@
 	<script>
 	$(document).ready(function(){
 		
-		//미션: #main 을 클릭하면 두번째 p태그 내부에 img태그를 5개 만들고 css설정을 absolute로 하여 차례대로 left이동 애니메이션을 하시오.
-		
+		/* 
+			html() 메서드
+			- html 선택요소 내부에 자손요소를 삽입하거나
+			읽어올 때 사용함
+			-> $(선택자).html(요소) : 요소삽입
+			-> 변수 = $(선택자).html() : 태그읽어옴
+			-> JS의 innerHTML과 유사
+		*/
+
+		//미션: #main>p중 첫번째 p를 클릭하면 두번째 p태그 내부에 img태그를 5개 만들고 css설정을 absolute로 하여 차례대로 left이동 애니메이션을 하시오.
+		$("#main").find("p").first() // 첫번째 p요소
+		.click(function(){
+			// 호출확인
+			
+			// this는 첫번째 요소
+			$(this) // 출발
+			.next() // 두번째 p요소
+			.html(`
+			<img src="pic1.jpg" alt="이미지">
+			<img src="pic2.jpg" alt="이미지">
+			<img src="pic3.jpg" alt="이미지">
+			<img src="pic4.jpg" alt="이미지">
+			<img src="pic5.jpg" alt="이미지">
+			`)
+			.find("img") // 5개의 이미지로 주인공변경
+			.css({
+				position : "absolute",
+				left : "0"
+			})
+			.first() // 이미지 중 첫번째 이미지
+			.css({width : "300px"})
+			.next() // 두번째 이미지
+			.css({width:"250px"})
+			.next() // 세번째 이미지
+			.css({width:"200px"})
+			.next() // 네번째 이미지
+			.css({width:"150px"})
+			.next() // 다섯번째 이미지
+			.css({width:"100px"})
+			//////// 애니메이션 주기 /////////
+			// 마지막 이미지에서 부모로 이동! //
+			.parent() // 부모인 두번째 p요소로 이동!
+			.find("img") // 5개의 이미지 선택
+			.eq(1) // 두번째 이미지
+			.delay(1000) // 1초후
+			.animate({left:"300px"},400) // 액션!
+			.next() // 세번째 이미지
+			.delay(1400) // 1.4초후
+			.animate({left:"550px"},300) // 액션!
+			.next() // 네번째 이미지
+			.delay(1700) // 1.7초후
+			.animate({left:"750px"},200) // 액션!
+			.next() // 다섯번째 이미지
+			.delay(1900) // 1.9초후
+			.animate({left:"900px"},100) // 액션!
+			// 추가 짝수 이동 애니메이션
+			// 마지막 이미지로부터 다시 부모로 이동하여 선택
+			.parent().find("img:even") // 짝수이미지(1부터)
+			.delay(2000) // 위의 총 액션시간 + 2초 기다림
+			.animate({top:"200px"},500) // 액션!
+
+			// 추가 짝수 이동 애니메이션
+			// 다시 부모로 이동하여 선택
+			.parent().find("img:odd").first() // 홀수 중 첫번째  
+			.delay(2000) // 위의 총 액션시간 + 2초 기다림
+			.animate({top:"-50px"},500) // 액션!
+
+			.parent().find("img:odd").last() // 홀수 중 마지막 
+			.delay(2000) // 위의 총 액션시간 + 2초 기다림
+			.animate({top:"50px"},500) // 액션!
+
+			// html 태그 찍어보기 //
+			console.log("현재html:",$("#main").html());
+
+		});//////////// click ////////////////
 	
 		
 	});/////////// jQB ///////////////////////
