--- a/004.JS학습/JS5-5.생성자함수.html
+++ b/004.JS학습/JS5-5.생성자함수.html
@@ -75,12 +75,11 @@
             this.문구 = des;
 
             // 메서드 1가지 셋팅
-            this.함수 = ()=>{
-                return
-                `영화 ${this.제목}의 감독님 이름은 ${this.감독}입니다`;
-            };
+            this.함수 = () =>
+            `영화 ${this.제목}의 감독님 이름은 ${this.감독}입니다`;
 
         }//////////////MovieInfo 생성자함수 //////////////
+        console.log("생성자함수의 데이터형은?",typeof MovieInfo);
         document.write("<h1>JS5-5.생성자함수</h1>");
         
         // 영화정보배열
@@ -108,8 +107,12 @@
                 </ul>
             `;
 
+            // 함수찍어보기 //
+            console.log(x.함수());
+
         }//////////////////// for of ///////////////////////
         document.write(hcode);
+        
 </script>
 </head>
 <body>
